# ros1_bootcamp

./: README.md
docs/lec2/libraries_for_arduino/Rosserial_Arduino_Library/src/: ros.h
docs/lec2/mpu6050_esp32/: 50-esp32.rules
docs/lec2/schematics/: schematics.kicad_pro  schematics.kicad_sch
docs/lec3/config/: params.yaml
docs/lec3/smb_highlevel_controller/: CMakeLists.txt  package.xml
docs/lec3/smb_highlevel_controller/config/: params.yaml
docs/lec3/smb_highlevel_controller/src/: smb_highlevel_controller_node.cpp
docs/lec3/src/: smb_highlevel_controller_node.cpp
docs/lec4/bagfiles/: link2Bag.txt
mpu6050_esp32/: mpu6050_esp32.ino
smb_gazebo/: package.xml
smb_gazebo/launch/: smb_custom.launch  smb_example.launch  smb_gazebo.launch  smb_pillar.launch
smb_gazebo/worlds/: singlePillar.world
smb_highlevel_controller/: CMakeLists.txt  package.xml
smb_highlevel_controller/src/: laserscan_min_distance_subscriber.cpp  smb_highlevel_controller_node.cpp
